--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,26 @@
     <string name="feedBack">피드백</string>
     <string name="inquiry">문의하기</string>
     <string name="nextArrowDescription">해당 설정가기 표시</string>
+    <string name="backArrowDescription">뒤로가기 표시</string>
+    <string name="backUpHint">작성된 일기 및 분노한 횟수등을 내부 저장소에\n 백업 및 복원할 수 있습니다.</string>
+    <string name="dataBackup">데이터 백업하기</string>
+    <string name="dataRestore">데이터 복원하기</string>
+    <string name="ADView">개발자를 위해 광고보기</string>
+    <string name="countSettingDescription">숫자 세기를 진행할 때, \n시간 및 종료음을 변경해보세요!</string>
+    <string name="countSettingDescription2">핸드폰이 무음모드인 경우, \n종료음(진동, 소리)는 울리지 않습니다.</string>
+    <string name="diarySettingDescription">일기를 작성 및 확인할 때, \n임시저장 및 표시를 변경해보세요!</string>
+    <string name="diarySettingDescription2">임시저장이 꺼질 경우, \n현재 저장된 임시저장 일기가 삭제됩니다.</string>
+    <string name="diaryTempSave">임시저장</string>
+    <string name="settingTime">시 간</string>
+    <string name="settingSecond1">10초</string>
+    <string name="settingSecond2">20초</string>
+    <string name="settingSecond3">30초</string>
+    <string name="settingSecond4">60초</string>
+    <string name="settingEndSound">종료음</string>
+    <string name="settingVibration">진동</string>
+    <string name="settingSound">소리</string>
+    <string name="settingSoundAndVibration">진동+소리</string>
+    <string name="settingSilence">무음</string>
 
     //DiaryWrite Activity Text
     <string name="diaryWrite">일기작성</string>
