--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,4 +86,6 @@
     //DiaryShow Activity Text
     <string name="spinnerMenuUpdate">수 정</string>
     <string name="spinnerMenuDelete">삭 제</string>
+    <string name="diaryDelete">일기삭제</string>
+    <string name="deleteConfirmMessage">정말 일기를 삭제하시겠습니까?</string>
 </resources>
