--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,8 +45,9 @@
     <string name="setDiary">일기 설정</string>
     <string name="data">데이터</string>
     <string name="backUpAndRestore">백업 및 복원</string>
-    <string name="feedBack">피드백</string>
+    <string name="etc">기타</string>
     <string name="inquiry">문의하기</string>
+    <string name="personalInfo">개인정보처리방침</string>
     <string name="nextArrowDescription">해당 설정가기 표시</string>
     <string name="backArrowDescription">뒤로가기 표시</string>
     <string name="backUpHint">작성된 일기 및 분노한 횟수등을 내부 저장소에\n 백업 및 복원할 수 있습니다.</string>
